package edu.mum.cs.cs525.labs.lab1;

public interface InterestCalculator {
    double getInterest(double balance);
}
